#24: Cleaning up the changelog

--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,7 @@
 <p><b>6.0.1 Release 1</b> -- March 13, 2020</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/24">#24: upgrade to converse.js 6.0.1</a>, which includes these changes:
+        <h4>For Converse 6.0.1:</h4>
         <ul>
             <li>Bugfix. Handle stanza that clears the MUC subject</li>
             <li><a href="https://github.com/conversejs/converse.js/issues/1313">#1313</a>: Stylistic improvements to the send button</li>
@@ -58,14 +59,9 @@
             <li><a href="https://github.com/conversejs/converse.js/issues/1826">#1826</a>: A user can now add himself as a contact</li>
             <li>Note: due to a bug in the webpack config, the webfonts directory isn't copied over from ./sass to ./dist when you build 
                 your own distribution files. As a workaround, you can just copy it over manually.
-                </li>
+            </li>
         </ul>
-    </li>
-</ul>
-
-<p><b>6.0.0 Release 1</b> -- January 11, 2020</p>
-<ul>
-    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/24">#24: upgrade to converse.js 6.0.0</a>, which includes these changes:
+        <h4>For Converse 6.0.0:</h4>
         <ul>
             <li><a href="https://conversejs.org/docs/html/configuration.html#enable-smacks">enable-smacks</a> is not set to true by default.</li>
             <li>Refactor some presence and status handling code from converse-core into @converse/headless/converse-status.</li>
