fixes #31: Update Converse to 7.0.3

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,22 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>7.0.3 Release 1</b> -- December 8, 2020</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/31">#31: upgrade to converse.js 7.0.3</a>, which includes these changes:
+        <h4>For Converse 7.0.3:</h4>
+        <ul>
+            <li>Bugfix: null inserted by emoji picker and can't switch between skintones</li>
+        </ul>
+        <h4>For Converse 7.0.2:</h4>
+        <ul>
+            <li>Updated translations: de, nb, gl, tr</li>
+            <li>Still more necessary files not included in the 7.0.1 NPM package, causing Module not found errors.</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/2337">#2337</a>: Newly opened headline chat isn't hidden by default</li>
+        </ul>
+    </li>
+</ul>
+
 <p><b>7.0.1 Release 1</b> -- November 22, 2020</p>
 <ul>
     <li>Most <a href="https://conversejs.org/docs/html/configuration.html">Converse configuration properties</a> can now be specified, by setting them as a Openfire system property, prepended with <tt>inverse.config.</tt> (eg: <tt>inverse.config.ping_interval</tt>).</li>
