--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,16 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>7.0.4 Release 1</b> -- December 26, 2020</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/33">#31: upgrade to converse.js 7.0.4</a>, which includes these changes:
+        <h4>For Converse 7.0.4:</h4>
+        <ul>
+            <li>Bugfix: Set protocol after discovering connection methods</li>
+        </ul>
+    </li>
+</ul>
+
 <p><b>7.0.3 Release 1</b> -- December 8, 2020</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/31">#31: upgrade to converse.js 7.0.3</a>, which includes these changes:
