Add release changelog, release date

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,27 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>7.0.6 Release 2</b> -- July 6, 2021</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/38">#38: Fix governance issues in 7.0.6 release</a></li>
+</ul>
+
+<p><b>7.0.6 Release 1</b> -- July 6, 2021</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/35">#35: Update to Converse 7.0.6</a>, which includes these changes:
+        <h4>For Converse 7.0.6:</h4>
+        <ul>
+            <li>Bugfix: Wrong assignment in OMEMO code</li>
+        </ul>
+        <h4>For Converse 7.0.5:</h4>
+        <ul>
+            <li>Bugfix: The @converse/headless NPM package is missing the dist directory, causing import errors</li>
+            <li>Bugfix: @converse/headless wrongly depends on CustomElement from the view layer</li>
+            <li>Bugfix: Converse does not reflect the browser language</li>
+        </ul>
+    </li>
+</ul>
+
 <p><b>7.0.4 Release 1</b> -- December 26, 2020</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/33">#31: upgrade to converse.js 7.0.4</a>, which includes these changes:
