--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>8.0.1 Release 1</b> -- (tbd)</p>
+<p><b>8.0.1 Release 1</b> -- November 4, 2021</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/40">#40: Update to Converse 8.0.1</a>, which includes these changes:
         <h4>For Converse 8.0.1:</h4>
