--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>9.0.0 Release 1</b> -- (tbd)</p>
+<p><b>9.0.0 Release 1</b> -- December 1, 2021</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/42">#42: Update to Converse 9.0.0</a>, which includes these changes:
         <h4>For Converse 9.0.0:</h4>
