fixes #44: Stop using deprecated Openfire API
Replaces calls to Openfire's API that have been deprecated. This should prevent issues when that code is removed from Openfire (likely to happen in Openfire 4.8.0 as part of OF-2395).

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>9.0.0 Release 2</b> -- (tbd)</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/44">#44</a>: Replace usage of deprecated Openfire API.
+</ul>
+
 <p><b>9.0.0 Release 1</b> -- December 1, 2021</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/42">#42: Update to Converse 9.0.0</a>, which includes these changes:
