--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>9.1.0 Release 1</b> -- (tbd)</p>
+<p><b>9.1.0 Release 1</b> -- April 6, 2022</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/44">#44</a>: Replace usage of deprecated Openfire API.
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/46">#46: Update to Converse 9.1.0</a>, which includes these changes:
