--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>9.1.1 Release 1</b> -- (tbd)</p>
+<p><b>9.1.1 Release 1</b> -- May 10, 2022</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/49">#49: Update to Converse 9.1.1</a>, which includes these changes:
         <ul>
