fixes #52: Upgrade dependency org.json:json from version 20180813 to 20220320

--- a/changelog.html
+++ b/changelog.html
@@ -98,6 +98,7 @@
             <li><a href="https://github.com/conversejs/converse.js/issues/3028">#3028</a>: Fix encrypted media from Conversations/Quicksy not properly decrypting</li>
         </ul>
     </li>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/52">#52</a>: Upgrade dependency org.json:json from version 20180813 to 20220320</li>
 </ul>
 <p><b>9.1.1 Release 1</b> -- May 10, 2022</p>
 <ul>
