Fix release date in changelog

--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.2 Release 1</b> -- (tbd)</p>
+<p><b>10.1.2 Release 1</b> -- February 24, 2023</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/51">#51: Update to Converse 10.1.2</a>, which includes these changes:
         <h4>For Converse 10.1.2:</h4>
