--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>10.1.2 Release 2</b> -- (tbd)</p>
+<ul>
+    <li>Bump json from 20220320 to 20230227</li>
+</ul>
+
 <p><b>10.1.2 Release 1</b> -- February 24, 2023</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/51">#51: Update to Converse 10.1.2</a>, which includes these changes:
