--- a/changelog.html
+++ b/changelog.html
@@ -43,10 +43,15 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.3 Release 1</b> -- (tbd)</p>
+<p><b>10.1.4 Release 1</b> -- June 27, 2023</p>
 <ul>
     <li>Bump json from 20220320 to 20230227</li>
-    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/56">#56: Update to Converse 10.1.3</a>, which includes these changes:
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/56">#56: Update to Converse 10.1.4</a>, which includes these changes:
+        <h4>For Converse 10.1.4:</h4>
+        <ul>
+            <li>Fix <tt>dist</tt> directory not included in NPM package</li>
+        </ul>
+        <h4>For Converse 10.1.3:</h4>
         <ul>
             <li>Add the ability to set roles and affiliations via the MUC occupant modal</li>
             <li>Fix <tt>isOnlyEmojis is not a function</tt> when using only <tt>@converse/headless</tt></li>
