fixes #60: Upgrade to Converse 10.1.6

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,23 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>10.1.6 Release 1</b> -- (tbd)</p>
+<ul>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/60">#60: Update to Converse 10.1.6</a>, which includes these changes:
+        <h4>For Converse 10.1.6:</h4>
+        <ul>
+            <li><a href="https://github.com/conversejs/converse.js/issues/3246>">#3246</a>: Badge color not responsive to dark theme</li>
+            <li>Fix a GIF rendering bug that causes a memory overflow</li>
+        </ul>
+        <h4>For Converse 10.1.5:</h4>
+        <ul>
+            <li><a href="https://github.com/conversejs/converse.js/issues/3209>">#3209</a>: Fix error when importing the converse global with bootstrap modal API</li>
+            <li><a href="https://github.com/conversejs/converse.js/issues/3207>">#3207</a>: .po translation files weren't included in previous release</li>
+            <li>Updated Galician and Portuguese translations</li>
+        </ul>
+    </li>
+</ul>
+
 <p><b>10.1.4 Release 1</b> -- June 27, 2023</p>
 <ul>
     <li>Bump json from 20220320 to 20230227</li>
