--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.6 Release 1</b> -- (tbd)</p>
+<p><b>10.1.6 Release 1</b> -- September 4, 2023</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/60">#60: Update to Converse 10.1.6</a>, which includes these changes:
         <h4>For Converse 10.1.6:</h4>
