Add changelog entry for org.json bump

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>10.1.6 Release 2</b> -- (tbd)</p>
+<ul>
+    <li>Bump org.json:json from 20230227 to 20231013</a>
+</ul>
+
 <p><b>10.1.6 Release 1</b> -- September 4, 2023</p>
 <ul>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/60">#60: Update to Converse 10.1.6</a>, which includes these changes:
