--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.7 Release 1</b> -- (tbd)</p>
+<p><b>10.1.7 Release 1</b> -- March 15, 2024</p>
 <ul>
     <li>Bump org.json:json from 20230227 to 20231013</li>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/63">#63: Update to Converse 10.1.7</a>, which includes these changes:
