Only compatible with Openfire < 5.0.0

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>10.1.7 Release 2</b> -- (to be determined)</p>
+<ul>
+    <li>Marked as last version to be compatible with Openfire versions prior to 5.0.0.</li>
+</ul>
+
 <p><b>10.1.7 Release 1</b> -- March 15, 2024</p>
 <ul>
     <li>Bump org.json:json from 20230227 to 20231013</li>
