--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.7 Release 2</b> -- (to be determined)</p>
+<p><b>10.1.7 Release 2</b> -- November 14, 2024</p>
 <ul>
     <li>Marked as last version to be compatible with Openfire versions prior to 5.0.0.</li>
 </ul>
