--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,13 @@
     inVerse Plugin Changelog
 </h1>
 
+<p><b>10.1.7 Release 3</b> -- (to be determined))</p>
+<ul>
+    <li>Requires Openfire 5.0.0 or later</li>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/68">#68:</a> Openfire 5.0.0 compatibility</li>
+</ul>
+
+
 <p><b>10.1.7 Release 2</b> -- November 14, 2024</p>
 <ul>
     <li>Marked as last version to be compatible with Openfire versions prior to 5.0.0.</li>
