--- a/changelog.html
+++ b/changelog.html
@@ -43,10 +43,11 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>10.1.8 Release 1</b> -- (to be determined))</p>
+<p><b>11.0.0 Release 1</b> -- (to be determined))</p>
 <ul>
     <li>Requires Openfire 5.0.0 or later</li>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/68">#68:</a> Openfire 5.0.0 compatibility</li>
+    <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/74">#74:</a> <tt>config.json</tt> response should have a Content-Type header</li>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/73">#73: Update to Converse 11.0.0</a>, which includes these changes:
         <h4>For Converse 11.0.0:</h4>
         <p>Github Issues</p>
