--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     inVerse Plugin Changelog
 </h1>
 
-<p><b>11.0.0 Release 1</b> -- (to be determined))</p>
+<p><b>11.0.1 Release 1</b> -- June 12, 2025</p>
 <ul>
     <li>Requires Openfire 5.0.0 or later</li>
     <li><a href="https://github.com/igniterealtime/openfire-inverse-plugin/issues/68">#68:</a> Openfire 5.0.0 compatibility</li>
